--- a/Projet session/index.html
+++ b/Projet session/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-  <head>
-  <body>
-    <div id="background">
-      <div id="background-overlay">
-        <div class="topnav">
-          <a href="#Contacter">Contacter</a>
-          <a href="#Alternatives">Alternatives</a>
-          <a href="#Commandes">Commandes</a>
-          <a href="#Installation">Installation</a>
-          <a class="active" href="#GIT">GIT</a>
-        </div>
-        <div class="logo">
-          <a>PROJET GIT</a>
-        </div>
+    <title>Projet Session GIT</title>
+  </head>
+  <body id="background">
+      <header>
+          <a href="#" id="logo">
+            <img src="Git-Logo-White.png" alt="logo"/>
+          </a>
+        <nav>
+          <ul class="ulNavBar">
+            <li><a href="#Contacter">Contacter</a></li>
+            <li><a href="#Alternatives">Alternatives</a></li>
+            <li><a href="#Commandes">Commandes</a></li>
+            <li><a href="#Installation">Installation</a></li>
+            <li><a class="active" href="#GIT">GIT</a></li>
+        </ul>
+        </nav>
+      </header>
+      <section>
         <div id="millieu" class="entete">
           <p>"Git was created by Linus Torvalds in 2005 for development of the Linux kernel, with other kernel developers contributing to its initial development" - git-scm.com</p>
         </div>
-        <div>
-          <button class="button" style="vertical-align:middle"><span>Survol de GIT</span></button>
-          <button class="button" style="vertical-align:middle"><span>Pourquoi l'utiliser</span></button>
-        </div>
-      </div>
-    </div>
+      </section>
+      <section>
+        <button class="button" style="vertical-align:middle"><span>Survol de GIT</span></button>
+      </section>
+      <section>
+        <button class="button" style="vertical-align:middle"><span>Pourquoi l'utiliser</span></button>
+            On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de constOn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. POn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrerOn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparues sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparueslusieurs versions sont apparuesuction. Plusieurs versions sont apparues
+      </section>
   </body>
+
 </html>
