--- a/Projet session/commandes.html
+++ b/Projet session/commandes.html
@@ -14,9 +14,9 @@
           <ul class="ulNavBar">
             <li><a href="contacter.html">Contacter</a></li>
             <li><a href="workflow.html">Workflow</a></li>
-            <li><a href="commandes.html">Commandes</a></li>
+            <li><a href="commandes.html" class="active">Commandes</a></li>
             <li><a href="installation.html">Installation</a></li>
-            <li><a href="index.html" class="active">GIT</a></li>
+            <li><a href="index.html">GIT</a></li>
         </ul>
         </nav>
       </header>
