--- a/Projet session/installation.html
+++ b/Projet session/installation.html
@@ -15,8 +15,8 @@
             <li><a href="contacter.html">Contacter</a></li>
             <li><a href="workflow.html">Workflow</a></li>
             <li><a href="commandes.html">Commandes</a></li>
-            <li><a href="installation.html">Installation</a></li>
-            <li><a href="index.html" class="active">GIT</a></li>
+            <li><a href="installation.html" class="active">Installation</a></li>
+            <li><a href="index.html">GIT</a></li>
         </ul>
         </nav>
       </header>
