--- a/Projet session/workflow.html
+++ b/Projet session/workflow.html
@@ -13,10 +13,10 @@
         <nav>
           <ul class="ulNavBar">
             <li><a href="contacter.html">Contacter</a></li>
-            <li><a href="workflow.html">Workflow</a></li>
+            <li><a href="workflow.html" class="active">Workflow</a></li>
             <li><a href="commandes.html">Commandes</a></li>
             <li><a href="installation.html">Installation</a></li>
-            <li><a href="index.html" class="active">GIT</a></li>
+            <li><a href="index.html">GIT</a></li>
         </ul>
         </nav>
       </header>
