--- a/SiteWeb/index.html
+++ b/SiteWeb/index.html
@@ -28,11 +28,11 @@
       </section>
       <section id="wrapper1" class="wrapper">
         <button id="button1" class="button"><span>Survol de GIT</span></button>
-        <p id="paragraphe1id">Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.ipsum dolor sit amet, consectetur adipisicing elit. Laborum repudiandae, itaque esse facilis, provident voluptates praesentium corporis quo, consequuntur, quasi fugit eligendi beatae aliquid voluptatibus amet! Et at voluptates voluptatibus.</p>
+        <p id="paragraphe1id" class="hidden">Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.ipsum dolor sit amet, consectetur adipisicing elit. Laborum repudiandae, itaque esse facilis, provident voluptates praesentium corporis quo, consequuntur, quasi fugit eligendi beatae aliquid voluptatibus amet! Et at voluptates voluptatibus.</p>
       </section>
       <section id="wrapper2" class="wrapper">
         <button id="button2" class="button"><span>Pourquoi l'utiliser</span></button>
-            <p id="paragraphe2id">On sait depuis longtemps que travailler construction. Plusieurs versions sont apparueslusieurs versions sont apparuesuction. Plusieurs versions sont apparues<p>
+            <p id="paragraphe2id" class="hidden">On sait depuis longtemps que travailler construction. Plusieurs versions sont apparueslusieurs versions sont apparuesuction. Plusieurs versions sont apparues<p>
       </section>
   </body>
 
