ajouter images, float-panel, changer css, html
Commencer le html/css de la page installation, ne pas se fier au image que j'ai mit c'est juste des tests pour voir quesque ça ferais

--- a/SiteWeb/index.html
+++ b/SiteWeb/index.html
@@ -34,6 +34,7 @@
         <button id="button2" class="button"><span>Pourquoi l'utiliser</span></button>
             <p id="paragraphe2id" class="hidden">On sait depuis longtemps que travailler construction. Plusieurs versions sont apparueslusieurs versions sont apparuesuction. Plusieurs versions sont apparues<p>
       </section>
+      <div id="what"></div>
   </body>
 
 </html>
