--- a/SiteWeb/installation.html
+++ b/SiteWeb/installation.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="javascript.js"></script>
+    <script src="float-panel.js"></script>
     <title>Projet Session GIT</title>
   </head>
-  <body id="background">
+  <body id="background_installation">
       <header>
           <a href="#" id="logo">
             <img src="Git-Logo-White.png" alt="logo"/>
@@ -21,16 +23,28 @@
         </nav>
       </header>
       <section>
-        <div id="millieu" class="entete">
-          <p>"Git was created by Linus Torvalds in 2005 for development of the Linux kernel, with other kernel developers contributing to its initial development" - git-scm.com</p>
+        <div id="millieu" class="entete_installation slideanim">
+          <p>Installation</p>
         </div>
       </section>
+      <div>
+        <hr class="style-five">
+      </div>
       <section>
-        <button class="button" style="vertical-align:middle"><span>Survol de GIT</span></button>
       </section>
+      <div class="slideanim">
+        <h1 class="etapes slideanim">Étape 1</h1>
+        <p class="petapes slideanim">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ducimus repellat, quod eligendi beatae quisquam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum nesciunt unde enim provident! Dolorem numquam exercitationem quia officia, praesentium tenetur.</p>
+        <img class="slideanim" id="resize" src="etapes2.jpg" alt="">
+        <h1 class="etapes slideanim">Étape 2</h1>
+        <p class="petapes slideanim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum nesciunt unde enim provident! Dolorem numquam exercitationem quia officia, praesentium tenetur.</p>
+        <img class="slideanim" src="etapes1.jpg" alt="">
+        <h1 class="etapes slideanim">Étape 3</h1>
+        <p class="petapes slideanim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum nesciunt unde enim provident! Dolorem numquam exercitationem quia officia, praesentium tenetur.</p>
+        <h1 class="etapes slideanim">Étape 4</h1>
+        <p class="petapes slideanim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum nesciunt unde enim provident! Dolorem numquam exercitationem quia officia, praesentium tenetur.</p>
+      </div>
       <section>
-        <button class="button" style="vertical-align:middle"><span>Pourquoi l'utiliser</span></button>
-            On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de constOn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. POn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrerOn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparues sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparueslusieurs versions sont apparuesuction. Plusieurs versions sont apparues
       </section>
   </body>
 
