--- a/SiteWeb/index.html
+++ b/SiteWeb/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="javascript.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/javascript.js"></script>
     <title>Projet Session GIT</title>
   </head>
   <body id="background">
       <header>
           <a href="#" id="logo">
-            <img src="Git-Logo-White.png" alt="logo"/>
+            <img src="image/Git-Logo-White.png" alt="logo"/>
           </a>
         <nav>
           <ul class="ulNavBar">
