--- a/SiteWeb/installation.html
+++ b/SiteWeb/installation.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="javascript.js"></script>
-    <script src="float-panel.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/javascript.js"></script>
+    <script src="js/float-panel.js"></script>
     <title>Projet Session GIT</title>
   </head>
   <body id="background_installation">
       <header>
           <a href="#" id="logo">
-            <img src="Git-Logo-White.png" alt="logo"/>
+            <img src="image/Git-Logo-White.png" alt="logo"/>
           </a>
         <nav>
           <ul class="ulNavBar">
@@ -32,17 +32,21 @@
       </div>
       <section>
       </section>
-      <div class="slideanim">
+      <div id="millieuecran" class="slideanim">
         <h1 class="etapes slideanim">Étape 1</h1>
-        <p class="petapes slideanim">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ducimus repellat, quod eligendi beatae quisquam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum nesciunt unde enim provident! Dolorem numquam exercitationem quia officia, praesentium tenetur.</p>
-        <img class="slideanim" id="resize" src="etapes2.jpg" alt="">
+        <p class="petapes slideanim">Voici le lien pour pouvoir télécharger Git</p>
+        <a id="lienGit" target="_tab" href="https://git-scm.com/download/win">Télécharger Git</a>
+        <img class="slideanim" id="resize" src="/SiteWeb/image/etapes1.jpg" alt="">
         <h1 class="etapes slideanim">Étape 2</h1>
-        <p class="petapes slideanim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum nesciunt unde enim provident! Dolorem numquam exercitationem quia officia, praesentium tenetur.</p>
-        <img class="slideanim" src="etapes1.jpg" alt="">
+        <p class="petapes slideanim">Vous pouvez choisir de créer un raccourci sur le bureau </p>
+        <img class="slideanim" src="/SiteWeb/image/etapes2.jpg" alt="">
         <h1 class="etapes slideanim">Étape 3</h1>
-        <p class="petapes slideanim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum nesciunt unde enim provident! Dolorem numquam exercitationem quia officia, praesentium tenetur.</p>
+        <p class="petapes slideanim">À cette étape il est préférable de choisir Notepad ++ vu que depuis le début de la session vous utiliser cet éditeur de texte</p>
+        <img class="slideanim" src="/SiteWeb/image/etapes3.jpg" alt="">
         <h1 class="etapes slideanim">Étape 4</h1>
-        <p class="petapes slideanim">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum nesciunt unde enim provident! Dolorem numquam exercitationem quia officia, praesentium tenetur.</p>
+        <p class="petapes slideanim">Ici il est conseillé d'y aller avec MinTTY car la console de Windows est plus restrictive ( C'est très dur de "scroll back" pour voir l'historique des commandes, La console doit être configurée pour pouvoir utiliser les caractère non ASCII)</p>
+        <img class="slideanim" src="/SiteWeb/image/etapes4.jpg" alt="">
+
       </div>
       <section>
       </section>
