--- a/SiteWeb/workflow.html
+++ b/SiteWeb/workflow.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Projet Session GIT</title>
   </head>
   <body id="background">
       <header>
           <a href="#" id="logo">
-            <img src="Git-Logo-White.png" alt="logo"/>
+            <img src="image/Git-Logo-White.png" alt="logo"/>
           </a>
         <nav>
           <ul class="ulNavBar">
