--- a/SiteWeb/index.html
+++ b/SiteWeb/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  <head>
-  <body>
-    <div id="background">
-      <div id="background-overlay">
-        <div class="topnav">
-          <a href="#Contacter">Contacter</a>
-          <a href="#Alternatives">Alternatives</a>
-          <a href="#Commandes">Commandes</a>
-          <a href="#Installation">Installation</a>
-          <a class="active" href="#GIT">GIT</a>
-        </div>
-        <div class="logo">
-          <a>PROJET GIT</a>
-        </div>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/javascript.js"></script>
+    <title>Projet Session GIT</title>
+  </head>
+  <body id="background">
+      <header>
+          <a href="#" id="logo">
+            <img src="image/Git-Logo-White.png" alt="logo"/>
+          </a>
+        <nav>
+          <ul class="ulNavBar">
+            <li><a href="contacter.html">Contacter</a></li>
+            <li><a href="workflow.html">Workflow</a></li>
+            <li><a href="commandes.html">Commandes</a></li>
+            <li><a href="installation.html">Installation</a></li>
+            <li><a href="index.html" class="active">GIT</a></li>
+        </ul>
+        </nav>
+      </header>
+      <section>
         <div id="millieu" class="entete">
           <p>"Git was created by Linus Torvalds in 2005 for development of the Linux kernel, with other kernel developers contributing to its initial development" - git-scm.com</p>
         </div>
-        <div>
-          <button class="button" style="vertical-align:middle"><span>Survol de GIT</span></button>
-          <button class="button" style="vertical-align:middle"><span>Pourquoi l'utiliser</span></button>
-        </div>
-      </div>
-    </div>
+      </section>
+      <section id="wrapper1" class="wrapper">
+        <button id="button1" class="button"><span>Survol de GIT</span></button>
+        <p id="paragraphe1id" class="hidden">Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.ipsum dolor sit amet, consectetur adipisicing elit. Laborum repudiandae, itaque esse facilis, provident voluptates praesentium corporis quo, consequuntur, quasi fugit eligendi beatae aliquid voluptatibus amet! Et at voluptates voluptatibus.</p>
+      </section>
+      <section id="wrapper2" class="wrapper">
+        <button id="button2" class="button"><span>Pourquoi l'utiliser</span></button>
+            <p id="paragraphe2id" class="hidden">On sait depuis longtemps que travailler construction. Plusieurs versions sont apparueslusieurs versions sont apparuesuction. Plusieurs versions sont apparues<p>
+      </section>
+      <div id="what"></div>
   </body>
+
 </html>
