--- a/SiteWeb/commandes.html
+++ b/SiteWeb/commandes.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Projet Session GIT</title>
   </head>
-  <body id="background">
+  <body id="background_commandes">
       <header>
           <a href="#" id="logo">
             <img src="image/Git-Logo-White.png" alt="logo"/>
@@ -15,21 +15,42 @@
             <li><a href="contacter.html">Contacter</a></li>
             <li><a href="conseils.html">Conseils</a></li>
             <li><a href="workflow.html">Workflow</a></li>
-            <li><a href="commandes.html" class="active">Commandes</a></li>
+            <li><a href="commandes.html">Commandes</a></li>
             <li><a href="installation.html">Installation</a></li>
             <li><a href="environnement.html">Environnement</a></li>
-            <li><a href="index.html">GIT</a></li>
+            <li><a href="index.html" class="active">GIT</a></li>
         </ul>
         </nav>
       </header>
-        <br><br>
       <section>
-        <button class="button" style="vertical-align:middle"><span>Survol de GIT</span></button>
+        <div id="millieu" class="entete_main">
+          <p>Commandes</p>
+        </div>
       </section>
-      <section>
-        <button class="button" style="vertical-align:middle"><span>Pourquoi l'utiliser</span></button>
-        <div id="notes">
-            On sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de constOn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. POn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrerOn sait depuis longtemps que travailler avec du texte lisible et contenant du sens est source de distractions, et empêche de se concentrer sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparues sur la mise en page elle-même. L'avantage du Lorem Ipsum sur un texte générique comme 'Du texte. Du texte. Du texte.' est qu'il possède une distribution de lettres plus ou moins normale, et en tout cas comparable avec celle du français standard. De nombreuses suites logicielles de mise en page ou éditeurs de sites Web ont fait du Lorem Ipsum leur faux texte par défaut, et une recherche pour 'Lorem Ipsum' vous conduira vers de nombreux sites qui n'en sont encore qu'à leur phase de construction. Plusieurs versions sont apparueslusieurs versions sont apparuesuction. Plusieurs versions sont apparues
+        <div>
+          <hr class="style-five">
+        </div>
+      <section class="font_namecommande">
+        <div class="listcommande1">
+          <div class="namecommande">Lorem ipsum</div>
+          <div class="namecommande">Lorem ipsum</div>
+          <div class="namecommande">Lorem ipsum</div>
+          <div class="namecommande">Lorem ipsum</div>
+          <div class="namecommande">Lorem ipsum</div>
+          <div class="namecommande">Lorem ipsum</div>
+          <div class="namecommande">Lorem ipsum</div>
+        </div>       
+      </section>
+      <section class="font_desccommande">
+        <div class="listecommande2">
+          <div class="desccommande">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum dignissimos pariatur tempore officiis ipsa eius iusto laudantium non tempora similique?Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, libero beatae. Laborum adipisci odio cumque dignissimos provident tenetur eligendi rem sunt! Quaerat sint quis omnis, quidem quasi itaque necessitatibus error.</div>
+          <div class="desccommande">Lorem ipsum dolor sit amet,</div>
+          <div class="desccommande">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum dignissi</div>
+          <div class="desccommande">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum dignissimos pariatur tempore officiis ipsa eius iusto laudantium non tempora similique?</div>
+          <div class="desccommande">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum dignissimos pariatur tempore officiis ipsa eius iusto laudantium non tempora similique?</div>
+          <div class="desccommande">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum dignissimos pariatur tempore officiis ipsa eius iusto laudantium non tempora similique?</div>
+          <div class="desccommande">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum dignissimos pariatur tempore officiis ipsa eius iusto laudantium non tempora similique? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor architecto, reprehenderit laudantium perspiciatis ad sequi.</div>
+        </div>
       </section>
   </body>
 
