--- a/SiteWeb/installation.html
+++ b/SiteWeb/installation.html
@@ -84,8 +84,8 @@
 
           <h1 class="etapes slideanim">Étape 10</h1>
             <p class="petapes slideanim">Il y a deux façons de démarrer un dépôt dans Git. Prendre un dépôt et l'importer dans Git à partir d'un répertoire existant ou de cloner un dépôt qui existe déjà sur un autre serveur</p>
-            <p class="petapes slideanim">Allons-y ici avec l'importation d'un répertoire existant. Il faut d'abord vous déplacer pour aller dans le fichier ou le projet réside et utiliser la commande init ( Au lieu d'écrire "cd /Utilisateurs/ton-username /ProjetSessionSoutien/" nous allons utiliser l'abréviation ~ comme suit) </p>
-            <p class="petapes slideanim">cd ~/ProjetSessionSoutien</p>
+            <p class="petapes slideanim">Allons-y ici avec l'importation d'un répertoire existant. Il faut d'abord creer un dossier ou aller dans un dossier existant. Veuillez-vous déplacer pour aller dans le fichier et utiliser la commande init ( Au lieu d'écrire "cd /Utilisateurs/ton-username/InstallationGIT/" nous allons utiliser l'abréviation ~ comme suit) </p>
+            <p class="petapes slideanim">cd ~/InstallationGIT</p>
               <img class="slideanim" src="image/etapes10.jpg" alt="">
 
           <h1 class="etapes slideanim">Étape 11</h1>
@@ -98,14 +98,14 @@
 
           <h1 class="etapes slideanim">Étape 12</h1>
             <p class="petapes slideanim">Pour cloner un dépôt qui existe déjà on doit utiliser la commande Clone</p>
-            <p class="petapes slideanim">git clone https://github.com/Nekind/ProjetSessionSoutien</p>
+            <p class="petapes slideanim">git clone https://github.com/NoMeta/Test</p>
             <p class="petapes slideanim">Cela crée un répertoire au nom du fichier cloner et initialise .git à l'intérieur et clone tous les fichiers inclus dans le projet et les historiques. (Si vous voulez nommer le répertoire autrement on ne dois qu'ajouter le nom de celui-ci après la commande.</p>
-            <p class="petapes slideanim">git clone https://github.com/Nekind/ProjetSessionSoutien testprojet</p>
+            <p class="petapes slideanim">git clone https://github.com/NoMeta/Test testprojet</p>
               <img class="slideanim" src="image/etapes12.jpg" alt="">
             <p class="petapes slideanim">Notre nouveau répertoire est maintenant créé</p>
               <img class="slideanim" src="image/etapes12_2.jpg" alt="">
             <p class="petapes slideanim">Pouvez-vous trouver "l'erreur" qui a été commit ici ?</p>
-            <p class="petapes slideanim">Quelle commande aurait du être utiliser avant le clone ?</p>
+            <p class="petapes slideanim">Quelle commande aurait dû être utilisé avant le clone ?</p>
             
         </div>
       </section>
