--- a/SiteWeb/conseils.html
+++ b/SiteWeb/conseils.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Projet Session GIT</title>
   </head>
-  <body id="background">
+  <body id="background_conseils">
       <header>
           <a href="#" id="logo">
             <img src="image/Git-Logo-White.png" alt="logo"/>
@@ -13,7 +13,7 @@
         <nav>
           <ul class="ulNavBar">
             <li><a href="contacter.html">Contacter</a></li>
-            <li><a href="conseils.html" class="active">Conseils</a></li>
+            <li><a href="conseils.html " class="active">Conseils</a></li>
             <li><a href="workflow.html">Workflow</a></li>
             <li><a href="commandes.html">Commandes</a></li>
             <li><a href="installation.html">Installation</a></li>
