--- a/SiteWeb/contacter.html
+++ b/SiteWeb/contacter.html
@@ -3,33 +3,37 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="js/javascript.js"></script>
+    <script src="js/float-panel.js"></script>
     <title>Projet Session GIT</title>
   </head>
-  <body id="background">
+  <body id="background_contacter">
       <header>
           <a href="#" id="logo">
             <img src="image/Git-Logo-White.png" alt="logo"/>
           </a>
         <nav>
-          <ul class="ulNavBar">
-            <li><a href="contacter.html">Contacter</a></li>
+          <ul class="ulNavBarc">
+            <li><a href="contacter.html"  class="active">Contacter</a></li>
             <li><a href="conseils.html">Conseils</a></li>
             <li><a href="workflow.html">Workflow</a></li>
             <li><a href="commandes.html">Commandes</a></li>
             <li><a href="installation.html">Installation</a></li>
             <li><a href="environnement.html">Environnement</a></li>
-            <li><a href="index.html" class="active">GIT</a></li>
+            <li><a href="index.html">GIT</a></li>
         </ul>
         </nav>
       </header>
 <br><br>
-        <div id="notes">
+        <div class="contacter_nom">
             <h1>
-                Tomy Roy
-                <br><br>
-                Sunny Cliche
-                <br><br>
-                Anthony Côté
+                <div class="contacter_nom1 slideanim"><p>Tomy Roy</p></div>
+                <div class="contacteremails slide-right"><p><i class="fa fa-envelope" style="font-size:36px"></i>&nbsp;&nbsp;&nbsp;&nbsp;tomyroy19@gmail.com</p></div>
+                <div class="contacter_nom2 slideanim"><p>Sunny Cliche</p></div>
+                <div class="contacteremails slide-right"><p><i class="fa fa-envelope" style="font-size:36px"></i>&nbsp;&nbsp;&nbsp;&nbsp;email@hotmail.com</p></div>
+                <div class="contacter_nom3 slideanim"><p>Anthony Côté</p></div>
+                <div class="contacteremails slide-right"><p><i class="fa fa-envelope" style="font-size:36px"></i>&nbsp;&nbsp;&nbsp;&nbsp;email@hotmail.com</p></div>
             </h1>
         </div>
 
