--- a/SiteWeb/environnement.html
+++ b/SiteWeb/environnement.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Projet Session GIT</title>
   </head>
-  <body id="background">
+  <body id="background_environnement">
       <header>
           <a href="#" id="logo">
             <img src="image/Git-Logo-White.png" alt="logo"/>
