--- a/SiteWeb/installation.html
+++ b/SiteWeb/installation.html
@@ -39,7 +39,7 @@
 
           <h1 class="etapes slideanim">Étape 1</h1>
             <p class="petapes slideanim">Voici le lien pour pouvoir télécharger Git</p>
-              <a id="lienGit" target="_tab" href="https://git-scm.com/download/win">Télécharger Git</a>
+              <a id="lienGit" target="_tab" href="https://git-scm.com/download/win"> --- Télécharger Git --- </a>
               <img class="slideanim" id="resize" src="image/etapes1.jpg" alt="">
 
           <h1 class="etapes slideanim">Étape 2</h1>
@@ -103,10 +103,12 @@
             <p class="petapes slideanim">git clone https://github.com/NoMeta/Test testprojet</p>
               <img class="slideanim" src="image/etapes12.jpg" alt="">
             <p class="petapes slideanim">Notre nouveau répertoire est maintenant créé</p>
-              <img class="slideanim" src="image/etapes12_2.jpg" alt="">
-            <p class="petapes slideanim">Pouvez-vous trouver "l'erreur" qui a été commit ici ?</p>
-            <p class="petapes slideanim">Quelle commande aurait dû être utilisé avant le clone ?</p>
-            
+
+          <h1 class="etapes slideanim">Installation de meld</h1>
+          <a id="lienGit" target="_tab" href="https://download.gnome.org/binaries/win32/meld/3.16/Meld-3.16.2-win32.msi"> --- Télécharger Meld --- </a>
+
+          <p class="petapes slideanim">Voici à quoi ça ressemble, mais nous n'allons pas l'utiliser tout de suite. Ça sera pour plus tard dans la présentation.</p>
+          <img class="slideanim" id="resize" src="image/meldimage.jpg" alt=""> 
         </div>
       </section>
   </body>
