--- a/SiteWeb/contacter.html
+++ b/SiteWeb/contacter.html
@@ -33,7 +33,7 @@
                 <div class="contacter_nom2 slideanim"><p>Sunny Cliche</p></div>
                 <div class="contacteremails slide-right"><p><i class="fa fa-envelope" style="font-size:36px"></i>&nbsp;&nbsp;&nbsp;&nbsp;email@hotmail.com</p></div>
                 <div class="contacter_nom3 slideanim"><p>Anthony Côté</p></div>
-                <div class="contacteremails slide-right"><p><i class="fa fa-envelope" style="font-size:36px"></i>&nbsp;&nbsp;&nbsp;&nbsp;email@hotmail.com</p></div>
+                <div class="contacteremails slide-right"><p><i class="fa fa-envelope" style="font-size:36px"></i>&nbsp;&nbsp;&nbsp;&nbsp;coteanthony0@gmail.com</p></div>
             </h1>
         </div>
 
