--- a/SiteWeb/installation.html
+++ b/SiteWeb/installation.html
@@ -38,7 +38,7 @@
         <div id="millieuecran" class="slideanim">
 
           <h1 class="etapes slideanim">Étape 1</h1>
-            <p class="petapes slideanim">Voici le lien pour pouvoir télécharger Git</p>
+            <p class="petapes slideanim">Voici le lien pour pouvoir télécharger Git: https://git-scm.com/download/win"</p>
               <a id="lienGit" target="_tab" href="https://git-scm.com/download/win"> --- Télécharger Git --- </a>
               <img class="slideanim" id="resize" src="image/etapes1.jpg" alt="">
 
@@ -47,24 +47,24 @@
               <img class="slideanim" src="image/etapes2.jpg" alt="">
 
           <h1 class="etapes slideanim">Étape 3</h1>
-            <p class="petapes slideanim">À cette étape il est préférable de choisir Notepad ++ vu que depuis le début de la session vous utiliser cet éditeur de texte</p>
+            <p class="petapes slideanim">À cette étape il est préférable de choisir Notepad ++ vu que depuis le début de la session vous utilisez cet éditeur de texte</p>
               <img class="slideanim" src="image/etapes3.jpg" alt="">
 
           <h1 class="etapes slideanim">Étape 4</h1>
-            <p class="petapes slideanim">Ici il est conseillé d'y aller avec MinTTY car la console de Windows est plus restrictive ( C'est très dur de "scroll back" pour voir l'historique des commandes, Laconsole doit être configurée pour pouvoir utiliser les caractère non ASCII)</p>
+            <p class="petapes slideanim">Ici il est conseillé d'y aller avec MinTTY car la console de Windows est plus restrictive ( C'est très dur de "scroll back" pour voir l'historique des commandes, La console doit être configurée pour pouvoir utiliser les caractères non ASCII)</p>
               <img class="slideanim" src="image/etapes4.jpg" alt="">
 
           <h1 class="etapes slideanim">Étape 5</h1>
-            <p class="petapes slideanim">Maintenant, clicker sur "Lunch Git bash" pour pouvoir ouvrir la console et commencer à utiliser le programme (Pas besoin d'aller voir les release notes)</p>
+            <p class="petapes slideanim">Maintenant, clicker sur "Lunch Git bash" pour pouvoir ouvrir la console et commencer à utiliser le programme (Pas besoin d'aller voir les releases notes)</p>
               <img class="slideanim" src="image/etapes5.jpg" alt="">
 
           <h1 class="etapes slideanim">Étape 6</h1>
             <p class="petapes slideanim">Vous devriez avoir une page qui ressemble à ceci :</p>
               <img class="slideanim" src="image/etapes6.jpg" alt="">
-            <p class="petapes slideanim">À ce moment, nous vous suggérons d'aller changer quelle que configuration de votre "user" afin de mettre votre nom d'utilisateur et votre adresse email au projet que vous allez travailler dessus.</p>
+            <p class="petapes slideanim">À ce moment, nous vous suggérons d'aller changer quelque configuration de votre "user" afin de mettre votre nom d'utilisateur et votre adresse email au projet que vous allez travailler dessus.</p>
 
           <h1 class="etapes slideanim">Étape 7</h1>
-            <p class="petapes slideanim">Veuillez taper les commandse qui suivent :</p>
+            <p class="petapes slideanim">Veuillez taper les commandes qui suivent :</p>
             <p class="petapes slideanim">git config --global user.name "Votre Nom"</p>
             <p class="petapes slideanim">git config --global user.email "VotreEmail@example.com"</p>
               <img class="slideanim" src="image/etapes7.jpg" alt="">
@@ -84,7 +84,7 @@
 
           <h1 class="etapes slideanim">Étape 10</h1>
             <p class="petapes slideanim">Il y a deux façons de démarrer un dépôt dans Git. Prendre un dépôt et l'importer dans Git à partir d'un répertoire existant ou de cloner un dépôt qui existe déjà sur un autre serveur</p>
-            <p class="petapes slideanim">Allons-y ici avec l'importation d'un répertoire existant. Il faut d'abord creer un dossier ou aller dans un dossier existant. Veuillez-vous déplacer pour aller dans le fichier et utiliser la commande init ( Au lieu d'écrire "cd /Utilisateurs/ton-username/InstallationGIT/" nous allons utiliser l'abréviation ~ comme suit) </p>
+            <p class="petapes slideanim">Allons-y ici avec l'importation d'un répertoire existant. Il faut d'abord créer un dossier ou aller dans un dossier existant. Veuillez vous déplacer pour aller dans le fichier et utiliser la commande init ( Au lieu d'écrire "cd /Utilisateurs/ton-username/InstallationGIT/" nous allons utiliser l'abréviation ~ comme suit) </p>
             <p class="petapes slideanim">cd ~/InstallationGIT</p>
               <img class="slideanim" src="image/etapes10.jpg" alt="">
 
@@ -99,15 +99,15 @@
           <h1 class="etapes slideanim">Étape 12</h1>
             <p class="petapes slideanim">Pour cloner un dépôt qui existe déjà on doit utiliser la commande Clone</p>
             <p class="petapes slideanim">git clone https://github.com/NoMeta/Test</p>
-            <p class="petapes slideanim">Cela crée un répertoire au nom du fichier cloner et initialise .git à l'intérieur et clone tous les fichiers inclus dans le projet et les historiques. (Si vous voulez nommer le répertoire autrement on ne dois qu'ajouter le nom de celui-ci après la commande.</p>
+            <p class="petapes slideanim">Cela crée un répertoire au nom du fichier cloner et initialise .git à l'intérieur et clone tous les fichiers inclus dans le projet et les historiques. (Si vous voulez nommer le répertoire autrement on ne doit qu'ajouter le nom de celui-ci après la commande.</p>
             <p class="petapes slideanim">git clone https://github.com/NoMeta/Test testprojet</p>
               <img class="slideanim" src="image/etapes12.jpg" alt="">
             <p class="petapes slideanim">Notre nouveau répertoire est maintenant créé</p>
 
-          <h1 class="etapes slideanim">Installation de meld</h1>
+          <h1 class="etapes slideanim">Installation de meld: http://meldmerge.org/</h1>
           <a id="lienGit" target="_tab" href="https://download.gnome.org/binaries/win32/meld/3.16/Meld-3.16.2-win32.msi"> --- Télécharger Meld --- </a>
 
-          <p class="petapes slideanim">Voici à quoi ça ressemble, mais nous n'allons pas l'utiliser tout de suite. Ça sera pour plus tard dans la présentation.</p>
+          <p class="petapes slideanim">Voici à quoi ça ressemble, mais nous n'allons pas l'utiliser tout de suite. Ce sera pour plus tard dans la présentation.</p>
           <img class="slideanim" id="resize" src="image/meldimage.jpg" alt=""> 
         </div>
       </section>
